# freelance-parser

./: .env.example  .gitignore  LICENSE  README.md  main.py  noxfile.py  pyproject.toml
docs/: Installation.md  STACK.md
